TestSuite/Verification/Error/Parallel/Correctness/Between-Multiple-Devices/Mapping-Defect/out/includes/ACC2SEQ2ACC.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef ACC2SEQ2ACC_HXX
#define ACC2SEQ2ACC_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif